tests/ui/variable_bits/zero_size_not_allowed.stderr
error: bits sizes must be greater than 0
 --> tests/ui/variable_bits/zero_size_not_allowed.rs:4:8
  |
4 | #[bits(0, 8)]  // Zero size not allowed
  |        ^
