tests/ui/variable_bits/zero_size_not_allowed.rs
use modular_bitfield::prelude::*;

#[derive(Specifier)]
#[bits(0, 8)]  // Zero size not allowed
enum TestData {
    #[discriminant = 0]
    Empty,
    #[discriminant = 1]
    Small(u8),
}

fn main() {}